test/fail/method-parameter-pattern.grace
method name(param : object {}) {}

name(object {})
